[package]
name = "edr_endpoint"
version = "0.1.0"
authors = ["dcervo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
chrono = "0.4.7"
whoami = "0.5.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.6.2"
# other dependecies that will be neded when features are implemneted
#log = "0.4.8"
#
#env_logger = "0.6.2"
#log4rs = "0.8.3"
#simple-logging = "2.0.2"


[[bin]]
name = "edr_endpoint"
path = "main.rs"
